--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
 <h1>About Page</h1>
-<p1>This is the about page</p1>
+<p>This is the about page</p>
+
+<%= link_to 'Articles listing', articles_path() %> |
+<%= link_to 'Home page', root_path() %>
