--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,10 @@
-<h1>Welcome to the Homepage</h1>
-
-<%= link_to 'Articles listing', articles_path() %> |
-<%= link_to 'About page', about_path() %>
+<div class="container text-center text-white" id="home-container">
+  <div class="p-5 mb-4 rounded-3">
+    <div class="container-fluid py-5" id="home-container-fluid">
+      <h1 class="display-5 fw-bold">Alpha Blog</h1>
+      <p class="fs-4">Textooooo</p>
+      <button class="btn btn-primary btn-lg" type="button">Articles listing</button>
+      <button class="btn btn-secondary btn-lg" type="button">About page</button>
+    </div>
+  </div>
+</div>
