--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -18,8 +18,12 @@
 }
 
 #home-container {
-  background-color: black;
-  // background-image: asset-url('img-home.jpg');
+  background: rgba(0, 0, 0, 0.6);
+  background-image: url('https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: darken;
   margin-top: 25px;
 }
   
@@ -37,4 +41,4 @@ body{
   flex: 1;
 }
 // Import Bootstrap v5  
-@import "~bootstrap/scss/bootstrap";  
+@import "~bootstrap/scss/bootstrap";
