--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,23 +1,27 @@
-<% if @article.errors.any? %>
-  <h2>The following errors prevented the article from being saved</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_with(model: @article, local: true) do |f| %>
-
-  <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= render 'shared/errors' %>
+      <%= form_with(model: @article, class:"shadow-lg mb-3 p-3 bg-body rounded", local: true) do |f| %>
+        <div class="row g-3 align-items-center pb-3">
+          <div class="col-12">
+            <%= f.label :title, class: "form-label" %>
+            <%= f.text_field :title, class: "form-control shadow-sm rounded", type:"text", id:"inputTitle", placeholder: "Title of article" %>
+          </div>
+        </div>
+        <div class="row g-3 align-items-center pb-3">
+          <div class="col-12">
+            <%= f.label :description, class: "form-label" %>
+            <%= f.text_area :description, rows: 5, class: "form-control shadow-sm rounded", type:"text", id:"inputDescription", placeholder: "Description of article" %>
+          </div>
+        </div>
+        <div class="row g-3 justify-content-center pb-3">
+          <%= f.submit class: "btn btn-success btn-lg col-auto" %>
+        </div>
+        <div class="text-center">
+        <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-decoration-none text-info" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
