--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,21 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @article.description %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %> |
-<%= link_to 'Back', articles_path %> |
+<h1 class="text-center mt-4"><%= @article.title %></h1>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-8 mt-4">
+      <div class="card text-center shadow mb-2 bg-body rounded">
+        <div class="card-header fst-italic">
+          by Andrés Carranza
+        </div>
+        <div class="card-body">
+          <p class="card-text"><%= simple_format(@article.description) %></p>
+          <%= link_to "Back", articles_path, class: "btn btn-outline-secondary" %>
+          <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-primary" %>
+          <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
+        </div>
+        <div class="card-footer text-muted">
+          Created <%= time_ago_in_words(@article.created_at) %> ago, edited <%= time_ago_in_words(@article.updated_at) %> ago
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
