--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,5 @@
-// inside app/frontend/packs/application.scss  
-  
+@import 'bootstrap/dist/css/bootstrap';
+
 #navbar_id {
   background-color: black !important;
 }
@@ -19,7 +19,7 @@
 
 #home-container {
   background: rgba(0, 0, 0, 0.6);
-  background-image: url('https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background-image: url('img-home.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -40,5 +40,3 @@ body{
 .content{
   flex: 1;
 }
-// Import Bootstrap v5  
-@import "~bootstrap/scss/bootstrap";
