--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav id="navbar_id" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar_id">
 <div class="container-fluid">
     <%= link_to "ALPHA BLOG", root_path, class: "navbar-brand", id: "logo" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,10 +15,11 @@
                     <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
                 </ul>
             </li>
-            
+            <!--
             <li class="nav-item">
                 <%= link_to "About", about_path, class: "nav-link" %>
             </li>
+            -->
         </ul>
         <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
