--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
       <div class="col-8 mt-4">
         <div class="card text-center shadow mb-2 bg-body rounded">
           <div class="card-header fst-italic">
-            by Andrés Carranza
+            by <%= article.user.username if article.user %>
           </div>
           <div class="card-body">
             <%= link_to article.title, article_path(article), class: "card-title text-success fs-5 text-decoration-none" %>
