--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= render 'shared/errors' %>
+      <%= render 'shared/errors', obj: @article %>
       <%= form_with(model: @article, class:"shadow-lg mb-3 p-3 bg-body rounded", local: true) do |f| %>
         <div class="row g-3 align-items-center pb-3">
           <div class="col-12">
