--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
     <div class="col-8 mt-4">
       <div class="card text-center shadow mb-2 bg-body rounded">
         <div class="card-header fst-italic">
-          by <%= article.user.username if article.user %>
+          by <%= @article.user.username if @article.user %>
         </div>
         <div class="card-body">
           <p class="card-text"><%= simple_format(@article.description) %></p>
