--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="row g-3 justify-content-center pb-3">
-          <%= f.submit "Sign Up", class: "btn btn-success btn-lg col-auto" %>
+          <%= f.submit(@user.new_record? ? "Sign Up" : "Update account", class: "btn btn-success btn-lg col-auto") %>
         </div>
         <div class="text-center">
         <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-decoration-none text-info" %>
