--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,28 +1,3 @@
 <h1 class="text-center mt-4">Listing all articles</h1>
-<div class="container">
-  <% @articles.each do |article| %>
-    <div class="row justify-content-md-center">
-      <div class="col-8 mt-4">
-        <div class="card text-center shadow mb-2 bg-body rounded">
-          <div class="card-header fst-italic">
-            by <%= article.user.username if article.user %>
-          </div>
-          <div class="card-body">
-            <%= link_to article.title, article_path(article), class: "card-title text-success fs-5 text-decoration-none" %>
-            <p class="card-text"><%= truncate(article.description, length: 100) %></p>
-            <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
-            <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-primary" %>
-            <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
-          </div>
-          <div class="card-footer text-muted">
-            Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago
-          </div>
-        </div>
-      </div>
-    </div>
-  <% end %>
-</div>
-<p>
-<%= link_to 'Create new article', new_article_path %> | 
-<%= link_to 'Home page', root_path() %>
-</p>
+
+<%= render 'aricle' %>
