--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,7 @@
     <div class="col-8 mt-4">
       <div class="card text-center shadow mb-2 bg-body rounded">
         <div class="card-header fst-italic">
+          <%= link_to gravatar_for(@article.user, options = { size: 40 }), user_path(@article.user) %>
           by <%= @article.user.username if @article.user %>
         </div>
         <div class="card-body">
