--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,20 @@
-<h1 class="text-center mt-4">Listing all articles</h1>
+<h1 class="text-center mt-4 mb-4">Listing all articles</h1>
+
+<div class="digg_pagination">
+  <div class="d-flex justify-content-center">
+    <%= will_paginate @articles, :container => false %>
+  </div>
+</div>
 
 <%= render 'article' %>
+
+<div class="digg_pagination mt-2 mb-2">
+  <div class="d-flex justify-content-center">
+    <div class="page_info rounded">
+      <%= page_entries_info @articles %>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center">
+    <%= will_paginate @articles, :container => false %>
+  </div>
+</div>
