--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,11 @@
 <h1 class="text-center mt-4 mb-4">Alpha Bloggers</h1>
 
+<div class="digg_pagination">
+  <div class="d-flex justify-content-center">
+    <%= will_paginate @users, :container => false %>
+  </div>
+</div>
+
 <div class="container">
   <% @users.each do |user| %>
     <div class="row justify-content-md-center">
@@ -21,4 +27,15 @@
       </div>
     </div>
   <% end %>
+</div>
+
+<div class="digg_pagination mt-2 mb-2">
+  <div class="d-flex justify-content-center">
+    <div class="page_info rounded">
+      <%= page_entries_info @users %>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center">
+    <%= will_paginate @users, :container => false %>
+  </div>
 </div>
