--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,33 +1,39 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar_id">
 <div class="container-fluid">
-    <%= link_to "ALPHA BLOG", root_path, class: "navbar-brand", id: "logo" %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <%= link_to "Bloggers", users_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Articles
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><%= link_to "Create a new article", new_article_path, class: "dropdown-item" %></li>
-                    <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
-                </ul>
-            </li>
-            <!--
-            <li class="nav-item">
-                <%= link_to "About", about_path, class: "nav-link" %>
-            </li>
-            -->
+  <%= link_to "ALPHA BLOG", root_path, class: "navbar-brand", id: "logo" %>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <%= link_to "Bloggers", users_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Articles
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><%= link_to "Create a new article", new_article_path, class: "dropdown-item" %></li>
+          <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
         </ul>
-        <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
-        </form>
-    </div>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Log In", login_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
+      </li>
+      <!--
+      <li class="nav-item">
+        <%= link_to "About", about_path, class: "nav-link" %>
+      </li>
+      -->
+    </ul>
+    <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Search</button>
+    </form>
+  </div>
 </div>
 </nav>
