--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,12 +18,22 @@
           <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
         </ul>
       </li>
-      <li class="nav-item">
-        <%= link_to "Log In", login_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
-      </li>
+
+      <% if logged_in? %>
+        <li class="nav-item">
+          <%= link_to current_user.username, user_path(current_user), class: "nav-link fw-bold" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Log In", login_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign Up", signup_path, class: "nav-link" %>
+        </li>
+      <% end %>
       <!--
       <li class="nav-item">
         <%= link_to "About", about_path, class: "nav-link" %>
