--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,8 +10,10 @@
         <div class="card-body">
           <p class="card-text"><%= simple_format(@article.description) %></p>
           <%= link_to "Back", articles_path, class: "btn btn-outline-secondary" %>
-          <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-primary" %>
+          <% if logged_in? && @article.user == current_user %>
+            <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-primary" %>
           <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
+        <% end %>
         </div>
         <div class="card-footer text-muted">
           Created <%= time_ago_in_words(@article.created_at) %> ago, edited <%= time_ago_in_words(@article.updated_at) %> ago
