--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,20 +9,31 @@
       <li class="nav-item">
         <%= link_to "Bloggers", users_path, class: "nav-link" %>
       </li>
+      
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Articles
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><%= link_to "Create a new article", new_article_path, class: "dropdown-item" %></li>
+           <% if logged_in? %>
+            <li><%= link_to "Create a new article", new_article_path, class: "dropdown-item" %></li>
+          <% end %>
           <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
         </ul>
       </li>
-
+      
       <% if logged_in? %>
-        <li class="nav-item">
-          <%= link_to current_user.username, user_path(current_user), class: "nav-link fw-bold" %>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Profile [ <b><%= current_user.username %></b> ]
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %></li>
+            <li><%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" %></li>
+          </ul>
         </li>
+
         <li class="nav-item">
           <%= link_to "Logout", logout_path, class: "nav-link", method: :delete %>
         </li>
