--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,10 +5,9 @@
 <% if logged_in? && @user == current_user %>
   <div class="text-center mt-4">
     <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-primary" %>
+    <%= link_to "Delete profile", user_path(@user), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>  
   </div>
 <% end %>
-
-
 
 <h3 class="text-center mt-4">Articles</h3>
 
