--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,7 +26,7 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Profile [ <b><%= current_user.username %></b> ]
+            <b class="text-danger"><%= "(admin)" if current_user.admin? %></b> Profile [ <b><%= current_user.username %></b> ]
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %></li>
